re-uploading recent improvements

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -243,47 +243,34 @@ Wo kommen diese Daten her?
 %Open Philology-Project letzten Jahres. Bei Omeka einloggen um Infos detailiert zu sehen. Falls dort nicht zu sehen, SOFORT THOMAS BESCHEIDGEBEN!
 
 \subsection{Produkteinsatz / Erwartete Userbasis}
-Ausgehend von der Motivation des Projektes sehen wir den vielversprechendsten Weg der Umsetzung logischerweise im Citizen Science Paradigma.
-Es werden Freiwillige benötigt, die ein persönliches Interesse darin haben, an der Entwicklung und dem Erfolg des Projektes mitzuwirken.
+Aus diesen Überlegungen schlussfolgernd sehen wir einen plausiblen Weg der Umsetzung des Projektes im Citizen Science Paradigma.
+Es werden Freiwillige benötigt, die ein persönliches Interesse daran haben, am Foranschreiten und dem Erfolg des Projektes mitzuwirken.
 Unsere Aufgabe ist es, nicht nur eine Plattform zur Verfügung zu stellen, auf der die entsprechende Arbeit verrichtet werden kann,
-sondern auch für Nutzer einen Anreiz zur Aufnahme der Arbeit bzw. zum Weiterarbeiten zu schaffen.
-Dies kann auf technischem oder sozialem Weg erreicht werden.
-Wir haben uns dafür entschieden, beide Wege zu nutzen, um ein möglichst großes Publikum anzusprechen.
-So haben wir technische Anreize beispielsweise über auf der Seite veröffentlichte Bestenlisten realisiert, oder durch einfache,
-schön anzuschauende Statistiken der User selbst. Die Realisierung technischer Anreize und Funktionen, die sich für Nutzer belohnend anfühlen,
-bietet ein großes Spektrum an Möglichkeiten.
+sondern auch für Nutzer einen Anreiz zur Aufnahme der Arbeit bzw. zum Weiterarbeiten zu schaffen.\\
+Wir haben uns dafür entschieden, sowohl den technischen als auch den sozialen Weg zu gehen, um ein möglichst großes Publikum anzusprechen.
+So haben wir technische Anreize beispielsweise über auf der Seite veröffentlichte Bestenlisten realisiert, oder durch aussagekräftige,
+optisch ansprechende Statistiken über den User selbst. Die Realisierung technischer Anreize und Funktionen, 
+die sich für den einzelnen Nutzer belohnend anfühlen, bietet ein großes Spektrum an Möglichkeiten.
 Leider ist gerade dieses Thema jedoch eines, das eher nach Hinten verschoben werden musste,
-da es unter Beachtung unseres Zeitrahmens nach der Basisfunktionalität ein zweitrangiges Ziel darstellt.
-Deswegen ist an dieser Baustelle auch nur die bisher beschriebene Menge an Funktionen aufgebaut worden.%beschrieben wo genau? FIXME
-
-Wichtig sind jedoch auch die nicht-technischen Anreize.
-Diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
+da es unter Beachtung unseres Zeitrahmens nach der Umsetzung der Basisfunktionalität ein zweitrangiges Ziel darstellt.
+Deswegen ist an dieser Stelle auch nur die oben genannten Funktionen aufgebaut worden.\\
+Wichtig sind jedoch auch die nicht-technischen Anreize; diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
 Bedenkt man die Fülle an Datenmaterial, welches wir zur Verfügung stellen, so ist es kaum vorstellbar,
-dass ein einziger Nutzer mit vertrebarem Zeitaufwand alle Dokumente transkribieren kann.
+dass ein einziger Nutzer mit vertrebaren Zeitaufwand alle Dokumente transkribieren kann.
 Diese Arbeitsleistung wird erst dadurch möglich, dass eine größere Gemeinschaft sich der Aufgabe annimmt.
 Im Umkehrschluss bedeutet das aber auch, dass man die Ergebnisse anderer Nutzer sehen und von ihnen lernen könnte.
 Jeder, der am Projekt teilnimmt, tut dies mit großer Sicherheit aus dem Grund,
-dass er ein gewisses Interesse und Wissen in dem Gebiet hat, und dieses teilen oder vergrößern möchte.
+dass er ein gewisses Interesse und Wissen z.B. in dem Gebiet der lateinischen Handschriften hat, und dieses teilen oder vergrößern möchte.
 Unsere Plattform bietet diesen zwei Interessentengruppen genau das.
-Selbst wenn also ein Nutzer kaum nutzbares Wissen hat, so kann unsere Plattform doch auch für ihn profitabel sein.
-Er könnte dadurch mehr lernen, und unter Umständen dieses neu erworbene Wissen im gleichen Atemzug anwenden.
-Unsere Nutzergemeinschaft lebt also letzten Endes davon, dass jeder seine eigenen Wissensfetzen mitbringt
-und jeder von den anderen lernen kann und somit etwas Gutes für sich und für den wissenschaftlichen Erkenntnisgewinn tut.%etwas Gutes zu subjektiv. FIXME
-Wenn wir diese Erkenntnis vermitteln können, dann ist auch damit ein großer Anreiz geschaffen.
-Außerdem schaffen wir die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft austauschen zu können.
-
-Bedenken wir die Motivation, die für einen Benutzer geschaffen wird, so ergibt sich auch ein gewisses Bild von der Zielgruppe, die wir anzusprechen versuchen.
-Natürlich wird niemand ausgeschlossen, der Interesse an der Arbeit hat und soll mittels Tutorial an die Aufgabe herangeführt werden.
-Doch wir erwarten, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
+Auch wenn ein Nutzer kaum Vorwissen im Transkribieren oder in Bezug auf lateinischer Schrift hat, kann er viel zum Projekt beitragen,
+im Verlauf dieser Arbeit sich dieses Wissen aneignen und im gleichen Atemzug anwenden.
+Außerdem schaffen wir damit die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft anzuschließen und 
+innerhalb dieser austauschen zu können.\\
+Aus diesen Überlegungen abgeleitet erwarten wir, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
 das zumindest einen Bezug zur Wissenschaft und der lateinischen Sprache hat.
-Das betrifft vorwiegend Geistes- sowie Sprachwissenschaften. Auch geschichtsinteressiertes Publikum wird erwartet,
+Das betrifft vorwiegend Geistes- sowie Sprachwissenschaftler. Auch geschichtsinteressiertes Publikum wird erwartet,
 ebenso wie Teilnehmer, die einfach ein persönliches, nicht-wissenschaftliches Interesse an altertümlicher Sprache besitzen.
-Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen,
-welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
-
-%TODO SO FAR
-%Rückbezug zur Einordnung unserer Software in die entsprechende Kathegorie von Citizen Science.
-%Warum sollen sich Nutzer registrieren?
+Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen, welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
 
 \section{Produktfunktion}
 Dass Nutzer sich planmäßig auf unterschiedlichen Wegen an der Arbeit beteiligen können sollten wurde bereits in unseren Zielen angerissen.
@@ -335,6 +322,32 @@ Durch die zeitliche Begrenzung des Projektes werden entsprechende offene Baustel
 %Welche Arbeitsabläufe gibt es?
 
 \section{Architektur}
+\subsection{Gesamtübersicht}
+Wir wollen diesen Abschnitt nutzen, um eine Übersicht darüber zu geben,
+wie die einzelnen Komponenten der TranscriptionDesk Software zusammen arbeiten.
+In Abbildung \ref{fig:components} haben wir dafür die minimal notwendigen Systeme,
+den TranscriptionDesk Server, den Omeka Server ,,Homer'', und einen Client Browser abgebildet
+und mittels Pfeilen markiert, welche Komponenten mit welchem System in Verbindung stehen.
+\\\begin{figure}[H]
+\includegraphics[width=\textwidth]{../notes/components.pdf}
+\caption{Diagramm einzelner Komponenten der TranscriptionDesk Website}
+\label{fig:components}
+\end{figure}
+Auf dem Homer Server ist eine Instanz der Omeka\footnote{\url{http://omeka.org/}} Software installiert.
+Innerhalb dieser Instanz werden die Scans verwaltet und anderen Teilnehmern im Internet bereitgestellt.
+Um Informationen über einzelne Scans, deren Metadaten und Sammlungen von Scans verfügbar zu machen,
+stellt Omeka eine eigene API bereit, von der wir mittels der PHP Omeka komponente in regelmäßigen Zeitabständen Daten sammeln.\\
+Die auf der TranscriptionDesk-Installation laufende MySQL Datenbank dient als Speicherplatz für alle eingehenden Informationen,
+sie wird gegenüber dem Rest der Website durch die PHP DB Logic Komponente gekapselt,
+die aus einer Reihe von Klassen besteht, deren Aufgabe es ist,
+Teile der domänenspezifischen Logik und Queries an die Datenbank zusammenzufassen
+und für den Rest des PHP codes verwendbar zu machen.\\
+Aufgabe der PHP Website Logic ist es, aus den vorliegenden Informationen ein Website zusammen zu setzen
+und den zu verwendenden JavaScript Code sowie von uns genutzte Teile des Bootstrap frameworks in die Website einzubetten.
+Bootstrap und JavaScript sind hier als getrennte Komponenten dargestellt,
+da sie sich prinzipiell auch auf andere Server verschieben lassen.\\
+Zum Anzeigen von Scans auf dem Clientgerät baut der Client neben der Verbindung zum TranscriptionDesk Server auch eine Verbindung zu Omeka auf,
+um die anzuzeigenden Scans zu erhalten.
 \subsection{Verwendete Technologien}
 In diesem Abschnitt werden die Technologien erläutert,
 die zum realisieren der TranscriptionDesk Website genutzt wurden.
@@ -358,8 +371,7 @@ läuft. Systemd ist ein neuerer System- und Servicemanager für Linux,
 den wir uns im speziellen zu nutze machen,
 um mittels timer in regelmäßigen Zeitabständen
 ein PHP script auszuführen,
-dass Daten von Omeka zu sammelt.%FIXME Gesamtübersicht vor Technologien, wegen Omeka?
-
+das Daten von Omeka zu sammelt.
 Innerhalb unseres Vagrantsetups betreiben wir einen LAMP-Stack\footnote{\url{https://en.wikipedia.org/wiki/LAMP_(software_bundle)}},
 das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnote{
     \url{https://httpd.apache.org/}
@@ -368,16 +380,14 @@ das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnot
     \url{https://en.wikipedia.org/wiki/MySQL}} und PHP\footnote{
     \url{https://secure.php.net/}
     \url{https://en.wikipedia.org/wiki/PHP}} nutzen.
-
 Basierend auf dieser serverseitigen Installation liefern wir eine Website an die Browser der Nutzer aus,
 die JavaScript\footnote{
     \cite{Flanagan},
-    \url{https://en.wikipedia.org/wiki/JavaScript}} enthält, dass es uns ermöglicht,
+    \url{https://en.wikipedia.org/wiki/JavaScript}} enthält, das es uns ermöglicht,
 erweiterte Funktionalitäten im Browser bereit zu stellen,
 und so komplexere Aufgaben wie das Markieren von Areas of Interest
-in einer Angenehmen Oberflächte zu präsentieren.
+auf einer angenehmen Oberfläche zu präsentieren.
 Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
-
 \begin{description}
 \item[jQuery:]
     Bei jQuery\footnote{\url{https://jquery.com/}} handelt es sich um eine beliebte JavaScript Bibliothek,
@@ -394,61 +404,21 @@ Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
     DESCRIBE ME!
 \item[bootbox:]
     DESCRIBE ME!
-\item[Require.js:]
-    DESCRIBE ME!
 \end{description}
-
-\subsection{Gesamtübersicht}
-Wir wollen diesen Abschnitt nutzen, um ein Bild darüber zu geben,
-wie die einzelnen Komponenten der TranscriptionDesk Software zusammen arbeiten.
-In Abbildung \ref{fig:components} haben wir dafür die minimal notwendigen Systeme,
-den TranscriptionDesk Server, den Omeka Server Homer, und einen Client Browser, abgebildet,
-und mittels Pfeilen markiert, zu welche Komponenten mit welchem System in Verbindung stehen.
-\\\begin{figure}[H]
-\includegraphics[width=\textwidth]{../notes/components.pdf}
-\caption{Diagramm einzelner Komponenten der TranscriptionDesk Website}
-\label{fig:components}
-\end{figure}
-
-Auf dem Server Homer ist eine Instanz der Omeka\footnote{\url{http://omeka.org/}} software installiert.
-Innerhalb dieser Instanz werden die Scans verwaltet, und anderen Teilnehmern im Internet bereit gestellt.
-Um Informationen über einzelne Scans,
-deren Metadaten, und Sammlungen von Scans verfügbar zu machen,
-stellt Omeka eine eigene API bereit,
-von der wir mittels der PHP Omeka komponente in regelmäßigen Zeitabständen Daten sammeln.
-
-Die auf der TranscriptionDesk-Installation laufende MySQL Datenbank dient als Speicherplatz für alle anfallenden Informationen,
-sie wird gegenüber dem Rest der Website durch die PHP DB Logic Komponente gekapselt,
-die aus einer Reihe von Klassen besteht, deren Aufgabe es ist,
-Teile der domänenspezifischen Logik und Queries an die Datenbank zusammenzufassen
-und für den Rest des PHP codes verwendbar zu machen.
-
-Aufgabe der PHP Website Logic ist es,
-aus den vorliegenden Informationen ein Website zusammen zu setzen,
-und den zu verwendenden JavaScript code sowie von uns genutzte Teile des Bootstrap frameworks in die Website einzubetten.
-Bootstrap und JavaScript sind hier als getrennte Komponenten dargestellt,
-da sie sich prinzipiell auch auf andere Server verschieben lassen.
-
-Zum Anzeigen von Scans auf dem Clientgerät baut der Client neben der Verbindung zum TranscriptionDesk Server auch eine Verbindung zu Omeka auf Homer auf,
-um die anzuzeigenden Scans zu erhalten.
-
 \subsection{Datenbank}
 In diesem Abschnitt widmen wir uns dem Aufbau der Datenbank.
 Da wir mit MySQL eine relationale Datenbank einsetzen,
 werden anfallende Daten auf einzelne Tabellen verteilt gespeichert,
 die zueinander in Relation stehen.
-
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{../notes/ER.pdf}
 \caption{Entity-Relationship Diagramm der Datenbank}
 \label{fig:er}
 \end{figure}
-
 Wie dem Entity-Relationship Diagramm in Abbildung \ref{fig:er} entnommen werden kann,
-gibt es in unserer Datenbank 5 Grundlegende Tabellen,
+gibt es in unserer Datenbank 5 grundlegende Tabellen,
 und 4 weitere Tabellen,
 die $n:m$ Relationen zwischen diesen realisieren.
-
 \begin{description}
 \item[omekaItems:]
     Die Tabelle omekaItems wird von einem systemd timer,
@@ -459,7 +429,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     speichern wir dafür sowohl die URL,
     als auch die zugehörige URN jedes Items.
     Um Aufschluss darüber zu haben,
-    ob und welchen Besuchern wir bestimmte Datensätze anzeigen dürfen,
+    ob und welchem Besuchern wir bestimmte Datensätze anzeigen dürfen,
     hat jeder Datensatz Booleans in den Feldern public und featured.
     Die von diesen Feldern abgeleitete Zugriffslogik sieht wie folgt aus:
 
@@ -481,7 +451,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     Zusätzlich gibt es das Feld scanDataJSON,
     in dem Metadaten zum Scan gesammelt werden.
     Dazu zählen etwa die unterschiedlichen Auflösungen,
-    in denen ein Scan verfügbar ist,
+    in denen ein Scan verfügbar ist
     oder das Dateiformat des Scans.
 \item[areasOfInterest:]
     Alle von Nutzern der TranscriptionDesk Website markierten Areas of Interest werden in der areasOfInterest Tabelle gespeichert.
@@ -491,7 +461,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     gibt es in dieser Tabelle die Felder typeEnum und typeText.
 \item[transcriptions:]
     Die transcriptions Tabelle ordnet jeder Area of Interest eine Transcription im Markdown format zu,
-    sowie den Zeitstempel des speicherns und eine eindeutige URN, die von der der zugehörigen Area of Interest abgeleitet wird.
+    sowie den Zeitstempel des Speicherns und eine eindeutige URN, die von der der zugehörigen Area of Interest abgeleitet wird.
 \item[users:]
     Um Nutzern die Registerierung zu ermöglichen,
     sowie eine einfache Rechteverwaltung zu etablieren,
@@ -513,7 +483,6 @@ die $n:m$ Relationen zwischen diesen realisieren.
     haben die jeweiligen Tabellen Felder,
     die auf einen Eintrag in der users Tabelle verweisen.
 \end{description}
-
 Neben diesen grundlegenden Tabellen sind 3 weitere Tabellen hervorzuheben:
 Die Tabellen aoiCompleteness, scanCompleteness und transcriptionCompleteness
 realisieren Abstimmungen über die Vollständigkeit der jeweiligen Areas of Interest, Transkriptionen, und scans.
@@ -528,11 +497,8 @@ Stimmt ein als Administrator markierter Nutzer ab,
 so wird dessen Stimme sofort als Entscheidung gewertet.
 
 \section{Projektverlauf}
-In diesem Abschnitt möchten wir den Ablauf unseres Projektes
-von den ersten Treffen bis hin zum finalen Stand berichten.
-Dass nicht immer alles planmäßig verläuft liegt in der Natur der Sache.
-Deswegen möchten wir die unterwegs aufgetretenen Probleme genauer betrachten,
-und unsere Entscheidungen und Abwägungen nachvollziehbar darlegen. \\
+In diesem Abschnitt möchten wir den Verlauf unseres Projektes von den ersten Treffen bis hin zum finalen Stand kurz skizzieren.
+Wir möchten dabei vor allem auf Schwierigkeiten eingehen und die unterwegs aufgetretenen Probleme sowie die Designentscheidungen genauer betrachten. \\
 Ausgehend von unseren bereits erwähnten Zielen waren wir zu Beginn in der Lage,
 notwendige Technologien abzuschätzen.
 Dabei legten wir viel Wert auf die Auslagerung von Funktionen auf Dienste,
@@ -631,7 +597,7 @@ Schon am 26. Juni gab es ein nächstes Treffen.
 Um uns allen ein laufendes Setup einzurichten,
 versuchten wir,
 Docker unter Windows bei Oliver einzurichten.
-Dazu gibt es Boot2Docker,
+Dazu gibt es ,,Boot2Docker'',
 welches explizit unter Windows funktionieren soll,
 jedoch funktionierte dieser Ansatz nicht,
 da das Setup möglicherweise kaputt war - so unser Verständnis davon.
@@ -645,7 +611,7 @@ ein und es entstand in weiteren Überlegungen ein Tafelbild,
 welches als Grundlage für die oben gezeigte Komponentengrafik fungierte,
 welche wir mit Yed erstellten. \\
 Am 1. Juli kamen wir wieder zusammen.
-Im gespräch mit Thomas wurden wir für unser Setupproblem auf Vagrant aufmerksam
+Im Gespräch mit Thomas wurden wir für unser Setupproblem auf Vagrant aufmerksam
 gemacht und setzten uns auch direkt an die Umsetzung dieses Lösungsansatzes.
 Vor allem sollte es unter Windows besser laufen.
 Jakob war von Vagrant nicht hundertprozentig überzeugt und überlegte,
@@ -689,7 +655,7 @@ die auch momentan noch in unserem Code zu finden ist,
 in der das Markieren von Areas of Interests und das
 Füllen derer Informationsboxen im gleichen Prozess geschieht,
 ging es in dem Dokument weitestgehend um Ideen zur
-Trennung dieser zwei Mechhanismen in eigenständige Aufgaben. \\
+Trennung dieser zwei Mechanismen in eigenständige Aufgaben. \\
 Am 8. Juli beschlossen wir,
 Transkriptionen bei Konsens auf Github zu stellen.
 Die URNs sollten dabei als Dateinamen dienen.
@@ -742,10 +708,10 @@ dass es ausreichen müsste, vom Scan, um den es geht,
 jeweils nur eine Seite vorwärts oder rückwärts blättern zu können.
 Außerdem stellten wir fest,
 dass eine Fehlerbehandlung nötig werden könnte,
-falls URNs eine länge von 250 Zeichen überschreiten.
+falls URNs eine Länge von 250 Zeichen überschreiten.
 Deswegen müssen wir dies immer dann überprüfen,
 wenn eine URN erstellt oder verändert wird.
-Wir haben auch darn übereingestimmt,
+Wir haben auch darin übereingestimmt,
 dass im Tutorial darauf hingewiesen werden sollte,
 dass Areas of Interest so sparsam wie möglich eingesetzt werden,
 und nur so viele gezogen werden,
@@ -755,7 +721,7 @@ Weiterhin möchten wir unter anderem Metadaten aus
 Dublin Core in unsere Transkriptionsansicht übernehmen.
 Außerdem beschlossen wir,
 dass es in Ordnung wäre,
-unsere Authentifikation für den moment auf Github zu beschränken.
+unsere Authentifikation für den Moment auf Github zu beschränken.
 Möglicherweise wird es im Rahmen unseres Projektes auch dabei bleiben.
 Weiterhin wäre es gut,
 ein MUFI-Keyboard direkt unter der Markdowneingabe einzusetzen.
@@ -801,7 +767,7 @@ Dazu nutzten wir die einzelnen Wörter in den
 Beschreibungsfeldern der einzelnen Zeichen als Tags.
 Diese wurden dann mittels Bucket-Sort organisiert
 und somit entstand die neue Kategorieform,
-welche sich als viel Nutzerfreundlicher erwies. \\
+welche sich als viel nutzerfreundlicher erwies. \\
 %***An diesem Punkt hören die Notes von Jakob auf.
 %Ich weiß nicht, was seither alles passiert ist.
 %Ich erinnere mich noch an weitere Vagrant-Probleme?
