Remove redundant wikipedia footnotes

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -353,8 +353,7 @@ um die anzuzeigenden Scans zu erhalten.
 In diesem Abschnitt werden die Technologien erläutert,
 die zum realisieren der TranscriptionDesk Website genutzt wurden.
 Als Grundlage des Entwicklungsprozesses griff die Projektgruppe auf Vagrant\footnote{
-    \url{https://www.vagrantup.com/}\\
-    \url{https://en.wikipedia.org/wiki/Vagrant_(software)}}
+    \url{https://www.vagrantup.com/}}
 zurück, welches darauf abzielt, eine einheitliche und minimale Entwicklungsumgebung zu schaffen.
 Dies wird möglich, indem Vagrant eine virtuelle Maschine provisioniert\footnote{
     Es lässt sich mit Docker auch eine reine Containerlösung nutzen.\\
@@ -366,8 +365,7 @@ Zudem ist es später leicht machbar, Vagrant zu benutzen,
 um das Projekt auf einem Server einzurichten.
 Bei unserem Setup gehen wir von einem Ubuntu Vivid 64bit aus,
 das mit systemd\footnote{
-    \url{https://wiki.freedesktop.org/www/Software/systemd/}\\
-    \url{https://en.wikipedia.org/wiki/Systemd}}
+    \url{https://wiki.freedesktop.org/www/Software/systemd/}}
 läuft. Systemd ist ein neuerer System- und Servicemanager für Linux,
 den wir uns im speziellen zu nutze machen,
 um mittels timer in regelmäßigen Zeitabständen
@@ -375,12 +373,9 @@ ein PHP script auszuführen,
 das Daten von Omeka zu sammelt.
 Innerhalb unseres Vagrantsetups betreiben wir einen LAMP-Stack\footnote{\url{https://en.wikipedia.org/wiki/LAMP_(software_bundle)}},
 das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnote{
-    \url{https://httpd.apache.org/}
-    \url{https://en.wikipedia.org/wiki/Apache_HTTP_Server}}, MySQL\footnote{
-    \url{https://www.mysql.com/}
-    \url{https://en.wikipedia.org/wiki/MySQL}} und PHP\footnote{
-    \url{https://secure.php.net/}
-    \url{https://en.wikipedia.org/wiki/PHP}} nutzen.
+    \url{https://httpd.apache.org/}}, MySQL\footnote{
+    \url{https://www.mysql.com/}} und PHP\footnote{
+    \url{https://secure.php.net/}} nutzen.
 Basierend auf dieser serverseitigen Installation liefern wir eine Website an die Browser der Nutzer aus,
 die JavaScript\footnote{
     \cite{Flanagan},
