Add url for CITE URNs
- Found the Homer Multitext Project website,
  which describes the nature of CITE URNs,
  and put it in a footnote.
- Relates to #18

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -227,7 +227,7 @@ oder etwa um Statistiken einzelner oder auch aller Nutzer zu erstellen.\\
 Außerdem besteht eine unserer wichtigsten Aufgaben darin, auf der gesamten Weboberfläche Unicode verwendbar und lesbar zu machen.
 Ganz speziell bedeutet das, das wir eine sehr umfangreiche Eingabemaske aufbauen müssen,
 die einen mächtigen Satz an mittelalterlichen Sonderzeichen in einer nutzerfreundlichen Art und Weise hergibt.
-Die Identifikation von Scans erfolgt über Cite URNs.% Quelle für Cite URNs zitieren! FIXME
+Die Identifikation von Scans erfolgt über Cite URNs\footnote{\url{http://www.homermultitext.org/hmt-doc/cite/cite-urn-overview.html}}.
 Wir wollen die Areas of Interest durch Erweiterung des Konzeptes ebenfalls über jene Cite URN identifizieren können.\\
 Die bisher genannten Features haben die höchste Priorität und bilden die Grundfunktionalität unserer Weboberfläche.
 Ab diesem Punkt lassen sich schrittweise weitere Features hinzufügen um die Arbeit zu erleichtern, angenehmer oder einfach ansprechender zu gestalten.
